--- a/Ex7/Ex7.html
+++ b/Ex7/Ex7.html
@@ -4,40 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ex 7</title>
-    <script src="scripts.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <title>Exercício 7</title>
+    <script src="scripts.js">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table>
-
-        <form action="" >Acesso ao Sistema
-            <tr>
-                <td>
-                    <label for="">Login:</label>
-<input type="text" id="txtLogin">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label for="">Senha:</label>
-<input type="text" id="txtSenha">
-                </td>
-            </tr>
-            <tr>
-                <td><label for="" >Confirmar senha:</label>
-                    <input type="text" id="txtConfSenha"></td>
-            </tr>
-        <tr>
-            <td>
-                <input type="button" value="Entrar" id="entrar">
-                <input type="button" value="Limpar">
-            </td>
-        </tr>
-    </form>
-    </table>
-    
+    <div class="container">
+        <h1> Acesso ao Sistema </h1>
+        <form action="">
+            <table>
+                <tr>
+                    <td><label for="login" style="display: flex; justify-content: right;">Login</label></td>
+                    <td><input type="text" id="login"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><label for="senha" style="display: flex; justify-content: right;">Senha</label></td>
+                    <td><input type="password" id="senha"></td>
+                    <td> <span>(max. 8 caracteres)</span> </td>
+                </tr>
+                <tr>
+                    <td><label for="confSenha" style="display: flex; justify-content: right;">Confirmar Senha</label></td>
+                    <td> <input type="password" id="confSenha"></td>
+                    <td> <span>(max. 8 caracteres)</span> </td>
+                </tr> 
+                <tr>
+                    <td></td>
+                    <td style="display: flex; justify-content: center;"> <input type="button" value="entrar" onclick="validar();"> <input type="reset" value="limpar"> </td>
+                    <td></td>
+                </tr>
+            </table>
+        </form>
+    </div>
 </body>
 </html>
-
-
